--- a/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/what-to-do-if-you-contribute-too-much.html
+++ b/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/what-to-do-if-you-contribute-too-much.html
@@ -122,8 +122,8 @@
                             <p>Whether you receive a notification or not, you will be required to file a TFSA Return for the excess amount. If you do not file a TFSA Return, you may receive a TFSA notice of assessment (NOA) later in the summer. </p>
 
                             <details>
-                            <summary>How TFSA issuers update the CRA</summary>
-                            <p>TFSA issuers must submit a summary of all the transactions that a holder makes in a calendar year by the end of February of the next calendar year.</p>
+                            <summary>TFSA issuers update the CRA annually</summary>
+                            <p>TFSA issuers must submit a summary of all the transactions that a holder makes in a calendar year to the CRA by the end of February of the next calendar year.</p>
                             <p>It is therefore possible for your TFSA to have an excess amount for several months before you are  notified about it.</p>
                             <p>It is important to  keep and maintain your own records, and to track your contributions  closely. You should withdraw any excess amount  as soon as possible to minimize penalties.</p>
                             </details>
