--- a/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/requesting-a-tfsa-transfer.html
+++ b/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/requesting-a-tfsa-transfer.html
@@ -265,7 +265,7 @@ div.mg-cell.pr-0 {
 <p class="mrgn-tp-md">Since Alexis withdrew the money from her existing TFSA and contributed it to the new TFSA herself, the transaction is considered a new contribution. In this case, it is an over-contribution of $50,000.</p>
 
 <p>Because Alexis did not do a direct transfer through the issuer of the new TFSA, she will be assessed by the CRA and may have to pay a 1% monthly tax on the excess amount. This comes to $500 per month until she removes the excess amount.</p>
-    <p>To avoid this situation, Alexis should have requested the issuer of the new TFSA do a direct transfer from her existing financial institution.</p>
+    <p>To avoid this situation, Alexis should have requested that the issuer of the new TFSA do a direct transfer from her existing financial institution.</p>
 
 <p>(The $50,000 of contribution room created by the withdrawal will be added back to her TFSA the <strong>next</strong> calendar year.)</p>
 </details>
