--- a/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/requesting-a-tfsa-transfer.html
+++ b/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/requesting-a-tfsa-transfer.html
@@ -186,7 +186,7 @@ div.mg-cell.pr-0 {
                             
 <details>
 <summary>Example: How doing your own transfer can have tax consequences</summary>
-<p>Alexis is a resident of Canada who has contributed the maximum allowed to her TFSA since the program began in 2009. In January of this year, she made a new contribution equal to the annual dollar limit. As a result, her unused contribution room is $0.</p>                         
+<p>Alexis is a resident of Canada who has contributed the maximum amount allowed to her TFSA since the program began in 2009. In January of this year, she made a new contribution equal to the annual dollar limit. As a result, her unused contribution room is $0.</p>                         
     <!--<p>Alexis is 43 years of age and a resident of Canada. In 2023, she opens a TFSA and contributes the maximum amount allowable for years 2009 to 2023. This is a total of $88,000.</p>-->
 
 <!--<div class="wb-math-grid">
