--- a/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-non-resident-contributions.html
+++ b/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-non-resident-contributions.html
@@ -97,7 +97,7 @@
                             <h2 class="h3">On this page</h2>
                     <ul>
                                 <li><a href="#toc1">How non-resident contributions are taxed</a></li>
-                                <li><a href="#toc2">How to report non-resident contributions </a></li>
+                                <li><a href="#toc2">Report non-resident contributions to the CRA</a></li>
                       </ul>
                             
 
@@ -132,8 +132,8 @@
                       </ul>
                                          
 
-                            <h2 id="toc2">How to report non-resident contributions</h2>
-                            <p>Submit your TFSA Return, any  additional forms, and your payment to the CRA <strong>by June 30</strong> of the calendar year after the year the tax applies. For example, if you owe tax on your TFSA in 2024, you must file by June 30, 2025.</p>
+                            <h2 id="toc2">Report non-resident contributions to the CRA</h2>
+                            <p>You must report any non-resident TFSA contribution to the CRA by filing a TFSA Return. Submit your TFSA Return, any additional forms, and your payment to the CRA <strong>by June 30</strong> of the calendar year after the year the tax applies. For example, if you owe tax on your TFSA in 2024, you must file by June 30, 2025.</p>
                       <p>Depending  on the payment option you choose, you may submit your forms separately from  your payment.</p>
 
   <ol class="lst-stps ld-zr">
