--- a/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-non-permitted-investments.html
+++ b/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-non-permitted-investments.html
@@ -107,7 +107,7 @@
                                 <li><a href="#toc1">How a prohibited investment is taxed</a></li>
                                 <li><a href="#toc2">How a non-qualified investment is taxed</a></li>
                                 <li><a href="#toc3">How an advantage is taxed</a></li>
-                                <li><a href="#toc4">How to report non-permitted investments</a></li>
+                                <li><a href="#toc4">Report non-permitted investments to the CRA</a></li>
                                  </ul>
                             
 
@@ -313,9 +313,9 @@
                               <p>If the advantage is extended by the issuer to the TFSA, then the issuer is liable for the tax and must file  an <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc298.html">Advantage tax  return for RRSP, TFSA, FHSA or RDSP issuers, RESP promoters or RRIF carriers  (RC298)</a>. </p>
                             
 
-<h2 id="toc4">How to report non-permitted investments</h2>
+<h2 id="toc4">Report non-permitted investments to the CRA</h2>
 
-<p>Submit your TFSA Return and your payment to the CRA by <strong>June 30</strong> of the calendar year after the year the tax applies. Depending on the payment option you choose, you may submit your forms separately from your payment.</p>
+<p>You must report any non-permitted TFSA investments to the CRA by filing a TFSA Return. Submit your TFSA Return and your payment to the CRA by <strong>June 30</strong> of the calendar year after the year the tax applies. Depending on the payment option you choose, you may submit your forms separately from your payment.</p>
                       <p>    If you disagree with your TFSA notice of assessment (NOA), you may <a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-to-pay-tax-on-a-tfsa.html#toc3">request a tax  waiver or cancellation</a>. </p>
 
 <ol class="lst-stps ld-zr">
