--- a/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-to-pay-tax-on-a-tfsa.html
+++ b/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-to-pay-tax-on-a-tfsa.html
@@ -122,9 +122,9 @@ For more information: <a href="https://cra-design.github.io/TFSA-cop/en/revenue-
                             <p>The TFSA Return can help you  calculate the amount of tax you owe. Depending on your situation, you may  also need to complete and submit additional schedules.</p>
                              <p>For tax forms and information: </p>
                             <ul>
-                              <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-excess-contributions.html#toc2">How to report excess amounts</a></li>
-                              <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-non-resident-contributions.html#toc2">How to report non-resident contributions</a></li>
-                              <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-non-permitted-investments.html#toc4">How to report non-permitted investments</a>&nbsp;</li>
+                              <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-excess-contributions.html#toc2">Report excess amounts</a></li>
+                              <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-non-resident-contributions.html#toc2">Report non-resident contributions</a></li>
+                              <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-non-permitted-investments.html#toc4">Report non-permitted investments</a>&nbsp;</li>
                             </ul>
                             
                                                       
