--- a/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-excess-contributions.html
+++ b/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-excess-contributions.html
@@ -101,7 +101,7 @@
                             <h2 class="h3">On this page</h2>
                             <ul>
                                 <li><a href="#toc1">How excess amounts are taxed</a></li>
-                                <li><a href="#toc2">Report the excess amount to the CRA</a></li>
+                                <li><a href="#toc2">Report excess amounts to the CRA</a></li>
                             </ul>
    
                             
@@ -145,7 +145,7 @@
                             <p> If you exceed your available contribution <a name="_Int_B8IbjT6V">room at a time when you are also a non-resident of Canada, the CRA can impose two separate 1%  monthly taxes on your TFSA.  </a></p>
                             <p>For more information: <a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-non-resident-contributions.html">If you are taxed on  non-resident contributions</a>.</p>
 
-                            <h2 id="toc2">Report the excess amount to the CRA</h2>
+                            <h2 id="toc2">Report excess amounts to the CRA</h2>
                             <p>You must report any excess TFSA amount to the CRA by filing a TFSA Return. Submit your TFSA Return, any  additional forms, and your payment to the CRA <strong>by June 30</strong> of the calendar year after the year the tax applies. For example, if you owe tax on your TFSA in 2024, you must file by June 30, 2025.</p>
                             <p>Depending  on the payment option you choose, you may submit your forms separately from  your payment.</p>
 
